Update casevault-intake: load S3 data, update counts to 2,366, fix stat animation

--- a/casevault-intake.html
+++ b/casevault-intake.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://engagement-hooks-site.s3.amazonaws.com/casevault/data/settlements.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CaseVault Insights — PI Settlement Benchmarks for Attorneys | AIBridges</title>
-    <meta name="description" content="Anonymous settlement benchmarking for personal injury attorneys. Compare your cases against 1,756+ real settlements across MA, CT, RI, and NH. Free calculator included.">
+    <meta name="description" content="Anonymous settlement benchmarking for personal injury attorneys. Compare your cases against 2,300+ real settlements across MA, CT, RI, and NH. Free calculator included.">
     <meta name="keywords" content="personal injury settlement calculator, PI settlement data, settlement benchmarks, attorney tools, case valuation, New England settlements">
     <link rel="canonical" href="https://aibridges.org/casevault-intake.html">
 
     <!-- Open Graph -->
     <meta property="og:title" content="CaseVault Insights — PI Settlement Benchmarks">
-    <meta property="og:description" content="Anonymous settlement benchmarking for personal injury attorneys. 1,756+ real cases across 4 states.">
+    <meta property="og:description" content="Anonymous settlement benchmarking for personal injury attorneys. 2,300+ real cases across 4 states.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aibridges.org/casevault-intake.html">
     <meta property="og:site_name" content="AIBridges">
@@ -18,7 +19,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="CaseVault Insights — PI Settlement Benchmarks">
-    <meta name="twitter:description" content="Anonymous settlement benchmarking for personal injury attorneys. 1,756+ real cases across 4 states.">
+    <meta name="twitter:description" content="Anonymous settlement benchmarking for personal injury attorneys. 2,300+ real cases across 4 states.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -835,7 +836,7 @@
             <span class="cv-gradient-text">Start Benchmarking.</span>
         </h1>
         <p class="cv-hero__subtitle cv-animate-in cv-stagger-2">
-            Compare your PI settlements against real market data from 1,756+ anonymized cases across Massachusetts, Connecticut, Rhode Island, and New Hampshire.
+            Compare your PI settlements against real market data from 2,300+ anonymized cases across Massachusetts, Connecticut, Rhode Island, and New Hampshire.
         </p>
         <div class="cv-hero__actions cv-animate-in cv-stagger-3">
             <a href="#access" class="cv-btn cv-btn--primary cv-btn--lg">
@@ -852,7 +853,7 @@
     <div class="cv-stats-glass">
         <div class="cv-stats-grid" id="statsGrid">
             <div class="cv-stat">
-                <div class="cv-stat__value" data-target="1756">0</div>
+                <div class="cv-stat__value" data-target="2366">0</div>
                 <div class="cv-stat__label">Total Settlements</div>
             </div>
             <div class="cv-stat">
@@ -949,7 +950,7 @@
             <div class="cv-compare__panel cv-compare__panel--new">
                 <div class="cv-compare__badge cv-compare__badge--new">CaseVault</div>
                 <div class="cv-compare__stat">Minutes, not hours</div>
-                <p class="cv-compare__desc">Select your filters. Browse comparable settlement data from 1,756+ anonymized cases.</p>
+                <p class="cv-compare__desc">Select your filters. Browse comparable settlement data from 2,300+ anonymized cases.</p>
             </div>
         </div>
 
@@ -962,7 +963,7 @@
             </div>
             <div class="cv-compare__panel cv-compare__panel--new">
                 <div class="cv-compare__badge cv-compare__badge--new">CaseVault</div>
-                <div class="cv-compare__stat">1,756+ data points</div>
+                <div class="cv-compare__stat">2,300+ data points</div>
                 <p class="cv-compare__desc">Every settlement is categorized by state, case type, severity, and outcome.</p>
             </div>
         </div>
@@ -1095,6 +1096,14 @@
 </footer>
 
 <script>
+    // ===== Load S3 Data =====
+    var DATA = window.CASEVAULT_DATA || null;
+    if (DATA && DATA.totalSettlements) {
+        // Update the data-target for total settlements
+        var totalEl = document.querySelector('[data-target="2366"]');
+        if (totalEl) totalEl.dataset.target = DATA.totalSettlements;
+    }
+
     // ===== Counter Animation =====
     function animateCounters() {
         document.querySelectorAll('[data-target]').forEach(function(el) {
