--- a/casevault-calculator.html
+++ b/casevault-calculator.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Load settlement data from S3 -->
     <script src="https://engagement-hooks-site.s3.amazonaws.com/casevault/data/settlements.js"></script>
+    <script>
+        // Auth check - redirect to intake if not authenticated
+        (function() {
+            const token = localStorage.getItem('casevault_token');
+            const expires = localStorage.getItem('casevault_expires');
+            if (!token || !expires || Date.now() >= parseInt(expires)) {
+                window.location.href = 'casevault-intake.html';
+            }
+        })();
+    </script>
     <style>
         .casevault-hero {
             background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
