Add AI Research Lab section with Ouroboros colony, formulas, metrics
- New research section between Products and More Services
- Shows stigmergic coordination formula: P(t) = P₀ × e^(-λt) × (1 + R × f(connections))
- Displays live colony stats: 5 colonies, 4000+ pheromones, 88 breakthroughs
- Cards for: recursive self-mod, stigmergic metrics, research paper
- Updated nav dropdown with Research links
- Responsive grid layout

--- a/index.html
+++ b/index.html
@@ -1504,6 +1504,145 @@
             }
         }
 
+        /* AI Research Lab Section */
+        .research-section {
+            background: linear-gradient(180deg, var(--bg-dark) 0%, rgba(99, 102, 241, 0.05) 50%, var(--bg-dark) 100%);
+            position: relative;
+        }
+
+        .research-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 24px;
+        }
+
+        .research-card {
+            background: var(--bg-card);
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            padding: 32px;
+            transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        .research-card:hover {
+            transform: translateY(-6px);
+            border-color: var(--primary);
+            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.15);
+        }
+
+        .research-card.main-card {
+            grid-column: span 2;
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), var(--bg-card));
+            border-color: rgba(99, 102, 241, 0.3);
+        }
+
+        .research-icon {
+            font-size: 40px;
+            margin-bottom: 16px;
+        }
+
+        .research-card h3 {
+            font-size: 22px;
+            font-weight: 700;
+            margin-bottom: 12px;
+            letter-spacing: -0.3px;
+        }
+
+        .research-card > p {
+            color: var(--text-muted);
+            font-size: 15px;
+            line-height: 1.7;
+            margin-bottom: 20px;
+        }
+
+        .formula-block {
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid var(--border);
+            border-radius: 12px;
+            padding: 20px;
+            margin-bottom: 24px;
+            text-align: center;
+        }
+
+        .formula-block code {
+            font-family: 'JetBrains Mono', 'Fira Code', monospace;
+            font-size: 16px;
+            color: var(--accent);
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        .formula-label {
+            font-size: 12px;
+            color: var(--text-muted);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .research-stats {
+            display: flex;
+            gap: 32px;
+            margin-bottom: 20px;
+        }
+
+        .r-stat {
+            text-align: center;
+        }
+
+        .r-num {
+            display: block;
+            font-size: 28px;
+            font-weight: 800;
+            background: linear-gradient(135deg, var(--primary), var(--accent));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .r-label {
+            font-size: 12px;
+            color: var(--text-muted);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .research-link {
+            color: var(--primary);
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 15px;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            transition: color 0.2s;
+        }
+
+        .research-link:hover {
+            color: var(--accent);
+        }
+
+        .research-highlight {
+            background: rgba(34, 211, 238, 0.1);
+            border-left: 3px solid var(--accent);
+            padding: 12px 16px;
+            font-size: 14px;
+            color: var(--accent);
+            font-style: italic;
+            border-radius: 0 8px 8px 0;
+        }
+
+        @media (max-width: 768px) {
+            .research-grid {
+                grid-template-columns: 1fr;
+            }
+            .research-card.main-card {
+                grid-column: span 1;
+            }
+            .research-stats {
+                justify-content: space-around;
+            }
+        }
+
         /* Products Section */
         .products-grid {
             display: grid;
@@ -3239,10 +3378,11 @@
                     </div>
                 </li>
                 <li class="nav-dropdown">
-                    <a href="#" data-nav>AI Lab</a>
+                    <a href="#research" data-nav>AI Lab</a>
                     <div class="dropdown-menu">
-                        <a href="#private-ai">Private AI</a>
-                        <a href="/ouroboros/">Ouroboros Colony</a>
+                        <a href="#research">🔬 Research</a>
+                        <a href="/ouroboros/">🐜 Ouroboros Colony</a>
+                        <a href="/ouroboros/research-paper.html">📄 Research Paper</a>
                     </div>
                 </li>
                 <li><a href="#contact" class="nav-cta">Contact Us</a></li>
@@ -3486,6 +3626,56 @@
 
             <div class="more-products-link reveal">
                 <a href="products.html">View all products (11) →</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- AI Research Lab Section -->
+    <section id="research" class="research-section">
+        <div class="section-container">
+            <div class="section-header reveal">
+                <span class="section-badge">🔬 AI Research</span>
+                <h2 class="section-title">The Ouroboros Colony</h2>
+                <p class="section-subtitle">Our autonomous AI research system that evolves itself. 5 colonies, 100+ cron jobs, recursive self-modification.</p>
+            </div>
+
+            <div class="research-grid">
+                <div class="research-card main-card reveal">
+                    <div class="research-icon">🐜</div>
+                    <h3>Stigmergic AI Coordination</h3>
+                    <p>Five specialized ant colonies coordinate through pheromone signals — no central controller. Each colony evolves its own research queries and shares discoveries through federation.</p>
+                    <div class="formula-block">
+                        <code>P(t) = P₀ × e^(-λt) × (1 + R × f(connections))</code>
+                        <span class="formula-label">Pheromone Decay with Reinforcement</span>
+                    </div>
+                    <div class="research-stats">
+                        <div class="r-stat"><span class="r-num">5</span><span class="r-label">Colonies</span></div>
+                        <div class="r-stat"><span class="r-num">4,000+</span><span class="r-label">Pheromones</span></div>
+                        <div class="r-stat"><span class="r-num">88</span><span class="r-label">Breakthroughs</span></div>
+                    </div>
+                    <a href="/ouroboros/" class="research-link">Explore the Colony →</a>
+                </div>
+
+                <div class="research-card reveal">
+                    <div class="research-icon">🧬</div>
+                    <h3>Recursive Self-Modification</h3>
+                    <p>The colony reads its own code, generates patches, and modifies itself with safety guards: circuit breakers, auto-rollback, and human approval for high-risk changes.</p>
+                    <div class="research-highlight">v23: Colony patched its own hierarchical pheromone system</div>
+                </div>
+
+                <div class="research-card reveal">
+                    <div class="research-icon">📊</div>
+                    <h3>Stigmergic Metrics</h3>
+                    <p>Quality emerges from behavior, not external judgment. We measure trail strength, connectivity, reinforcement patterns, and federation signals.</p>
+                    <div class="research-highlight">"LLM-as-Judge is not stigmergic"</div>
+                </div>
+
+                <div class="research-card reveal">
+                    <div class="research-icon">📄</div>
+                    <h3>Research Paper</h3>
+                    <p>18 sections documenting our methodology: binary embeddings, hierarchical pheromones, belief-to-implementation pipeline, and safety architecture.</p>
+                    <a href="/ouroboros/research-paper.html" class="research-link">Read the Paper →</a>
+                </div>
             </div>
         </div>
     </section>
