Rename to 'AI Research Project', sleeker design
- Changed 'Ouroboros Colony' to 'AI Research Project'
- Removed emoji icons from research cards for cleaner look
- Updated terminology: colonies → agents, pheromones → signals
- Cleaner card text, shorter descriptions
- Nav dropdown: 'AI Lab' → 'Research' with cleaner labels

--- a/index.html
+++ b/index.html
@@ -1536,11 +1536,6 @@
             border-color: rgba(99, 102, 241, 0.3);
         }
 
-        .research-icon {
-            font-size: 40px;
-            margin-bottom: 16px;
-        }
-
         .research-card h3 {
             font-size: 22px;
             font-weight: 700;
@@ -3378,11 +3373,11 @@
                     </div>
                 </li>
                 <li class="nav-dropdown">
-                    <a href="#research" data-nav>AI Lab</a>
+                    <a href="#research" data-nav>Research</a>
                     <div class="dropdown-menu">
-                        <a href="#research">🔬 Research</a>
-                        <a href="/ouroboros/">🐜 Ouroboros Colony</a>
-                        <a href="/ouroboros/research-paper.html">📄 Research Paper</a>
+                        <a href="#research">🔬 Overview</a>
+                        <a href="/ouroboros/">📊 Live System</a>
+                        <a href="/ouroboros/research-paper.html">📄 Paper</a>
                     </div>
                 </li>
                 <li><a href="#contact" class="nav-cta">Contact Us</a></li>
@@ -3634,47 +3629,43 @@
     <section id="research" class="research-section">
         <div class="section-container">
             <div class="section-header reveal">
-                <span class="section-badge">🔬 AI Research</span>
-                <h2 class="section-title">The Ouroboros Colony</h2>
-                <p class="section-subtitle">Our autonomous AI research system that evolves itself. 5 colonies, 100+ cron jobs, recursive self-modification.</p>
+                <span class="section-badge">🔬 Open Research</span>
+                <h2 class="section-title">AI Research Project</h2>
+                <p class="section-subtitle">We publish our research openly. Stigmergic coordination, recursive self-modification, emergent intelligence.</p>
             </div>
 
             <div class="research-grid">
                 <div class="research-card main-card reveal">
-                    <div class="research-icon">🐜</div>
                     <h3>Stigmergic AI Coordination</h3>
-                    <p>Five specialized ant colonies coordinate through pheromone signals — no central controller. Each colony evolves its own research queries and shares discoveries through federation.</p>
+                    <p>Autonomous agents coordinate through indirect signals — like ants leaving pheromone trails. No central controller. Intelligence emerges from simple rules and local interactions.</p>
                     <div class="formula-block">
-                        <code>P(t) = P₀ × e^(-λt) × (1 + R × f(connections))</code>
+                        <code>P(t) = P₀ · e<sup>-λt</sup> · (1 + R · f(c))</code>
                         <span class="formula-label">Pheromone Decay with Reinforcement</span>
                     </div>
                     <div class="research-stats">
-                        <div class="r-stat"><span class="r-num">5</span><span class="r-label">Colonies</span></div>
-                        <div class="r-stat"><span class="r-num">4,000+</span><span class="r-label">Pheromones</span></div>
-                        <div class="r-stat"><span class="r-num">88</span><span class="r-label">Breakthroughs</span></div>
+                        <div class="r-stat"><span class="r-num">5</span><span class="r-label">Agents</span></div>
+                        <div class="r-stat"><span class="r-num">4K+</span><span class="r-label">Signals</span></div>
+                        <div class="r-stat"><span class="r-num">88</span><span class="r-label">Discoveries</span></div>
                     </div>
-                    <a href="/ouroboros/" class="research-link">Explore the Colony →</a>
+                    <a href="/ouroboros/" class="research-link">View Live System →</a>
                 </div>
 
                 <div class="research-card reveal">
-                    <div class="research-icon">🧬</div>
-                    <h3>Recursive Self-Modification</h3>
-                    <p>The colony reads its own code, generates patches, and modifies itself with safety guards: circuit breakers, auto-rollback, and human approval for high-risk changes.</p>
-                    <div class="research-highlight">v23: Colony patched its own hierarchical pheromone system</div>
+                    <h3>Self-Modifying AI</h3>
+                    <p>Systems that read their own code, generate patches, and evolve — with safety guards, circuit breakers, and human oversight.</p>
+                    <div class="research-highlight">Latest: System patched its own coordination layer</div>
                 </div>
 
                 <div class="research-card reveal">
-                    <div class="research-icon">📊</div>
-                    <h3>Stigmergic Metrics</h3>
-                    <p>Quality emerges from behavior, not external judgment. We measure trail strength, connectivity, reinforcement patterns, and federation signals.</p>
+                    <h3>Emergent Quality</h3>
+                    <p>Quality emerges from behavior, not external judgment. We measure trail strength, connectivity, and reinforcement patterns.</p>
                     <div class="research-highlight">"LLM-as-Judge is not stigmergic"</div>
                 </div>
 
                 <div class="research-card reveal">
-                    <div class="research-icon">📄</div>
-                    <h3>Research Paper</h3>
-                    <p>18 sections documenting our methodology: binary embeddings, hierarchical pheromones, belief-to-implementation pipeline, and safety architecture.</p>
-                    <a href="/ouroboros/research-paper.html" class="research-link">Read the Paper →</a>
+                    <h3>Open Paper</h3>
+                    <p>18 sections: binary embeddings, hierarchical signals, belief-to-code pipeline, safety architecture.</p>
+                    <a href="/ouroboros/research-paper.html" class="research-link">Read Paper →</a>
                 </div>
             </div>
         </div>
