Rebrand Smart Screenshot Pro → SwiftShot
- New name: SwiftShot
- Updated features: SHA-256, WORM storage, AES-256, local processing
- New copy matching swiftshot landing page
- Lightning bolt icon

--- a/index.html
+++ b/index.html
@@ -3544,22 +3544,22 @@
             </div>
 
             <div class="featured-products-grid">
-                <!-- Smart Screenshot Pro -->
-                <div class="featured-product reveal" onclick="window.location='/smart-screenshot'" style="cursor:pointer">
-                    <div class="product-badge-new">⭐ Featured</div>
-                    <div class="product-icon-large">📸</div>
+                <!-- SwiftShot -->
+                <div class="featured-product reveal" onclick="window.location='/swiftshot'" style="cursor:pointer">
+                    <div class="product-badge-new">⚡ Featured</div>
+                    <div class="product-icon-large">⚡</div>
                     <span class="product-category">Legal Tech</span>
-                    <h3>Smart Screenshot Pro</h3>
-                    <p>Court-ready web captures with annotation, redaction, exhibit stamps, Bates numbering, and OCR.</p>
+                    <h3>SwiftShot</h3>
+                    <p>Capture, annotate, and preserve web evidence with tamper-proof WORM storage, SHA-256 hash verification, and full chain of custody.</p>
                     <ul class="product-features-list">
-                        <li>Exhibit stamps & Bates numbering</li>
-                        <li>Annotation & redaction tools</li>
-                        <li>OCR text extraction</li>
-                        <li>Encrypted export</li>
+                        <li>SHA-256 hash verification</li>
+                        <li>WORM tamper-proof storage</li>
+                        <li>AES-256 encrypted export</li>
+                        <li>100% local processing</li>
                     </ul>
                     <div class="product-footer">
                         <span class="product-price-tag">$99<span>/seat/year</span></span>
-                        <span class="product-cta">Learn more →</span>
+                        <span class="product-cta">View plans →</span>
                     </div>
                 </div>
 
