Remove boxes/borders: hero plasma border + ouroboros table card
- Removed plasma border wrapper from hero section (cleaner look)
- Removed plasma border from 3D office section
- Removed card wrapper from self-modifications table on ouroboros report
- Hidden the 'Agentic Office' card in hero for cleaner look

--- a/index.html
+++ b/index.html
@@ -3403,38 +3403,32 @@
             <div class="shape shape-3"></div>
         </div>
         <div class="hero-content">
-            <!-- Hero Title Section with Plasma Border -->
-            <div class="plasma-border-wrapper plasma-border-hero" id="heroPlasmaWrapper">
-                <canvas id="plasmaCanvasHero"></canvas>
-                <div class="hero-inner">
-                    <div class="hero-badge">
-                        <span class="pulse"></span>
-                        We Build & Deploy Claude Agents for Business
-                    </div>
-                    <h1>
-                        <span class="gradient">Your AI Workforce</span><br>
-                        Starts Here
-                    </h1>
-                    <p class="hero-subtitle">
-                        <span class="typewriter" id="typewriter">
-                            <span class="typewriter-text"></span><span class="typewriter-cursor"></span>
-                        </span>
-                    </p>
-                    <div class="hero-buttons">
-                        <a href="#contact" class="btn btn-primary ripple" role="button">
-                            <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
-                            Book a Strategy Call
-                        </a>
-                        <a href="#services" class="btn btn-secondary ripple" role="button">
-                            <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M8 5v14l11-7z"/></svg>
-                            See Agent Services
-                        </a>
-                    </div>
-                </div>
+            <div class="hero-badge">
+                <span class="pulse"></span>
+                We Build & Deploy Claude Agents for Business
+            </div>
+            <h1>
+                <span class="gradient">Your AI Workforce</span><br>
+                Starts Here
+            </h1>
+            <p class="hero-subtitle">
+                <span class="typewriter" id="typewriter">
+                    <span class="typewriter-text"></span><span class="typewriter-cursor"></span>
+                </span>
+            </p>
+            <div class="hero-buttons">
+                <a href="#contact" class="btn btn-primary ripple" role="button">
+                    <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                    Book a Strategy Call
+                </a>
+                <a href="#services" class="btn btn-secondary ripple" role="button">
+                    <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M8 5v14l11-7z"/></svg>
+                    See Agent Services
+                </a>
             </div>
 
             <!-- Agentic Office Card -->
-            <div class="free-lesson" role="article">
+            <div class="free-lesson" role="article" style="display:none;">
                 <span class="free-tag">Monthly Retainer</span>
                 <h3>The Agentic Office</h3>
                 <p>A team of Claude agents, deployed to your business, handling real work every day. We set them up, monitor them, and refine them monthly. You just see the results.</p>
@@ -3451,13 +3445,10 @@
                 <h2 class="section-title">See Our AI Team at Work</h2>
                 <p class="section-subtitle">Explore our virtual office where AI robots help manage your IT infrastructure.</p>
             </div>
-            <div class="plasma-border-wrapper">
-                <canvas id="plasmaCanvas"></canvas>
-                <div id="office3d-container">
-                    <canvas id="office3d"></canvas>
-                    <div class="office3d-hint">
-                        <i class="fas fa-hand-pointer"></i> Drag to explore | Scroll to zoom
-                    </div>
+            <div id="office3d-container">
+                <canvas id="office3d"></canvas>
+                <div class="office3d-hint">
+                    <i class="fas fa-hand-pointer"></i> Drag to explore | Scroll to zoom
                 </div>
             </div>
         </div>
