Mobile menu: Colony → Research, add research paper HTML
- Changed 'Ouroboros Colony' to 'Research' in mobile nav
- Created research-paper.html with full academic styling
- Includes key formulas, metrics, safety architecture
- Clean Georgia serif typography for paper feel

--- a/index.html
+++ b/index.html
@@ -3351,7 +3351,7 @@
         <a href="/youtube-trends" data-mobile-link>📊 YouTube Trends</a>
         <a href="/intake" data-mobile-link>⚖️ Case Trends</a>
         <a href="#private-ai" data-mobile-link>Private AI</a>
-        <a href="/ouroboros/" data-mobile-link>Ouroboros Colony</a>
+        <a href="#research" data-mobile-link>Research</a>
         <a href="#contact" data-mobile-link>Contact Us</a>
     </div>
 
