--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Claude AI Agents for Business | AIBridges - Cranston RI</title>
-    <meta name="description" content="AIBridges deploys Claude AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training. Cranston, RI.">
+    <title>AI Agents for Business | AIBridges - Cranston RI</title>
+    <meta name="description" content="AIBridges deploys AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training. Cranston, RI.">
 
     <!-- Open Graph / Social Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aibridges.org/">
-    <meta property="og:title" content="Claude AI Agents for Business | AIBridges - Cranston RI">
-    <meta property="og:description" content="AIBridges deploys Claude AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training. Cranston, RI.">
+    <meta property="og:title" content="AI Agents for Business | AIBridges - Cranston RI">
+    <meta property="og:description" content="AIBridges deploys AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training. Cranston, RI.">
     <meta property="og:image" content="https://aibridges.org/og-image.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Claude AI Agents for Business | AIBridges">
-    <meta name="twitter:description" content="AIBridges deploys Claude AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training.">
+    <meta name="twitter:title" content="AI Agents for Business | AIBridges">
+    <meta name="twitter:description" content="AIBridges deploys AI agents that automate your business workflows. Monthly agentic office retainer, agent architecture, and team training.">
 
     <!-- Geo Meta Tags for Local SEO -->
     <meta name="geo.region" content="US-RI">
@@ -3405,7 +3405,7 @@
         <div class="hero-content">
             <div class="hero-badge">
                 <span class="pulse"></span>
-                We Build & Deploy Claude Agents for Business
+                We Build & Deploy AI Agents for Business
             </div>
             <h1>
                 <span class="gradient">Your AI Workforce</span><br>
@@ -3431,7 +3431,7 @@
             <div class="free-lesson" role="article" style="display:none;">
                 <span class="free-tag">Monthly Retainer</span>
                 <h3>The Agentic Office</h3>
-                <p>A team of Claude agents, deployed to your business, handling real work every day. We set them up, monitor them, and refine them monthly. You just see the results.</p>
+                <p>A team of AI agents, deployed to your business, handling real work every day. We set them up, monitor them, and refine them monthly. You just see the results.</p>
                 <a href="#contact" class="btn btn-secondary ripple" role="button">Learn More <span aria-hidden="true">→</span></a>
             </div>
         </div>
@@ -3445,10 +3445,13 @@
                 <h2 class="section-title">See Our AI Team at Work</h2>
                 <p class="section-subtitle">Explore our virtual office where AI robots help manage your IT infrastructure.</p>
             </div>
-            <div id="office3d-container">
-                <canvas id="office3d"></canvas>
-                <div class="office3d-hint">
-                    <i class="fas fa-hand-pointer"></i> Drag to explore | Scroll to zoom
+            <div class="plasma-border-wrapper">
+                <canvas id="plasmaCanvas"></canvas>
+                <div id="office3d-container">
+                    <canvas id="office3d"></canvas>
+                    <div class="office3d-hint">
+                        <i class="fas fa-hand-pointer"></i> Drag to explore | Scroll to zoom
+                    </div>
                 </div>
             </div>
         </div>
@@ -3458,23 +3461,23 @@
     <section id="services">
         <div class="section-container">
             <div class="section-header reveal">
-                <span class="section-badge">Claude Agent Services</span>
+                <span class="section-badge">AI Agent Services</span>
                 <h2 class="section-title">We Deploy AI Agents That Actually Work</h2>
-                <p class="section-subtitle">From discovery to deployment to monthly management — we handle the entire lifecycle of your agentic AI workforce.</p>
+                <p class="section-subtitle">From discovery to deployment to monthly management — we handle the entire lifecycle of your AI workforce.</p>
             </div>
 
             <div class="services-grid" role="list" aria-label="AI services offered">
                 <div class="service-card reveal" role="listitem">
                     <div class="service-icon" aria-hidden="true">🎯</div>
                     <h3>Agent Discovery & Strategy</h3>
-                    <p>Audit your workflows, identify where Claude agents save time and money, and design your agent architecture.</p>
+                    <p>Audit your workflows, identify where AI agents save time and money, and design your agent architecture.</p>
                     <div class="service-price">Free Discovery Call</div>
                 </div>
 
                 <div class="service-card reveal" role="listitem">
                     <div class="service-icon" aria-hidden="true">🔧</div>
                     <h3>Agent Build & Deploy</h3>
-                    <p>Build your Claude agent fleet — task runners, doc processors, email handlers, data pipelines — and deploy with monitoring.</p>
+                    <p>Build your AI agent fleet — task runners, doc processors, email handlers, data pipelines — and deploy with monitoring.</p>
                     <div class="service-price">From $2,500 <span>/ deployment</span></div>
                 </div>
 
@@ -3500,7 +3503,7 @@
         <div class="neuron-showcase-inner">
             <div class="neuron-text reveal">
                 <h2>Intelligence That <span class="gradient">Never Sleeps</span></h2>
-                <p>Our Claude agents process, learn, and adapt around the clock. Like neurons firing in a living brain, your AI workforce connects the dots across every workflow — email triage, document review, data entry — without fatigue, without errors.</p>
+                <p>Our AI agents process, learn, and adapt around the clock. Like neurons firing in a living brain, your AI workforce connects the dots across every workflow — email triage, document review, data entry — without fatigue, without errors.</p>
                 <p>The result? Your team focuses on decisions. The agents handle everything else.</p>
                 <div class="neuron-stats">
                     <div class="neuron-stat">
@@ -3976,7 +3979,7 @@
         <div class="section-container">
             <div class="cta-content reveal">
                 <h2>Let's Build Your Agent Workforce</h2>
-                <p>Tell us what your team spends too much time on. We'll show you which tasks Claude agents can handle — and what it will cost. No pressure, no jargon.</p>
+                <p>Tell us what your team spends too much time on. We'll show you which tasks AI agents can handle — and what it will cost. No pressure, no jargon.</p>
 
                 <!-- Contact Form -->
                 <form action="https://formspree.io/f/mvzrqler" method="POST" class="contact-form" style="max-width: 500px; margin: 2rem auto 0; text-align: left;">
@@ -4009,7 +4012,7 @@
         <div class="footer-grid">
             <div class="footer-brand">
                 <h3>AIBridges</h3>
-                <p>Claude AI agent deployment and management for businesses. Based in Cranston, RI.</p>
+                <p>AI agent deployment and management for businesses. Based in Cranston, RI.</p>
             </div>
             <div class="footer-col">
                 <h4>Services</h4>
@@ -4497,7 +4500,7 @@
         // Typewriter effect
         const typewriterText = document.querySelector('.typewriter-text');
         const phrases = [
-            'Claude agents that run your back office.',
+            'AI agents that run your back office.',
             'Automated workflows. Real cost savings.',
             'We built it. We run it. We refine it.',
             'Your agentic office, managed monthly.'
