Move neuron video (blue particles) right under hero
- Neuron showcase section now appears right after hero
- Blue particle animation (neuron-bg.mp4) visible immediately after scroll

--- a/index.html
+++ b/index.html
@@ -3437,6 +3437,36 @@
         </div>
     </section>
 
+    <!-- Neuron Showcase (Blue Particle Animation) -->
+    <section class="neuron-showcase">
+        <div class="neuron-showcase-inner">
+            <div class="neuron-text reveal">
+                <h2>Intelligence That <span class="gradient">Never Sleeps</span></h2>
+                <p>Our AI agents process, learn, and adapt around the clock. Like neurons firing in a living brain, your AI workforce connects the dots across every workflow — email triage, document review, data entry — without fatigue, without errors.</p>
+                <p>The result? Your team focuses on decisions. The agents handle everything else.</p>
+                <div class="neuron-stats">
+                    <div class="neuron-stat">
+                        <span class="num">24/7</span>
+                        <span class="label">Uptime</span>
+                    </div>
+                    <div class="neuron-stat">
+                        <span class="num">10x</span>
+                        <span class="label">Throughput</span>
+                    </div>
+                    <div class="neuron-stat">
+                        <span class="num">0</span>
+                        <span class="label">Burnout</span>
+                    </div>
+                </div>
+            </div>
+            <div class="neuron-video-wrap reveal">
+                <video autoplay muted loop playsinline poster="neuron-bg-poster.jpg">
+                    <source src="neuron-bg.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </section>
+
     <!-- 3D Office Scene with Robots -->
     <section id="demo" class="parallax-container" style="padding: 0.5rem 0 2rem 0; background: linear-gradient(180deg, var(--bg-dark) 0%, rgba(20, 20, 35, 1) 100%);">
         <div class="section-container">
@@ -3494,36 +3524,6 @@
                     <p>Train your staff on prompt engineering, workflow management, and escalation. Optional full handoff included.</p>
                     <div class="service-price">$500<span>/session</span></div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Neuron Showcase -->
-    <section class="neuron-showcase">
-        <div class="neuron-showcase-inner">
-            <div class="neuron-text reveal">
-                <h2>Intelligence That <span class="gradient">Never Sleeps</span></h2>
-                <p>Our AI agents process, learn, and adapt around the clock. Like neurons firing in a living brain, your AI workforce connects the dots across every workflow — email triage, document review, data entry — without fatigue, without errors.</p>
-                <p>The result? Your team focuses on decisions. The agents handle everything else.</p>
-                <div class="neuron-stats">
-                    <div class="neuron-stat">
-                        <span class="num">24/7</span>
-                        <span class="label">Uptime</span>
-                    </div>
-                    <div class="neuron-stat">
-                        <span class="num">10x</span>
-                        <span class="label">Throughput</span>
-                    </div>
-                    <div class="neuron-stat">
-                        <span class="num">0</span>
-                        <span class="label">Burnout</span>
-                    </div>
-                </div>
-            </div>
-            <div class="neuron-video-wrap reveal">
-                <video autoplay muted loop playsinline poster="neuron-bg-poster.jpg">
-                    <source src="neuron-bg.mp4" type="video/mp4">
-                </video>
             </div>
         </div>
     </section>
