Add year filter to SQL tool + RI Real Estate to Trends menu

--- a/index.html
+++ b/index.html
@@ -3341,6 +3341,7 @@
         <a href="blog.html" data-mobile-link>Blog</a>
         <a href="/youtube-trends" data-mobile-link>📊 YouTube Trends</a>
         <a href="/intake" data-mobile-link>⚖️ Case Trends</a>
+        <a href="/ri-report.html" data-mobile-link>🏠 RI Real Estate</a>
         <a href="#private-ai" data-mobile-link>Private AI</a>
         <a href="#research" data-mobile-link>Research</a>
         <a href="#contact" data-mobile-link>Contact Us</a>
@@ -3361,6 +3362,8 @@
                     <div class="dropdown-menu">
                         <a href="/youtube-trends">📊 YouTube Trends</a>
                         <a href="/intake">⚖️ Case Trends</a>
+                        <a href="/ri-report.html">🏠 RI Real Estate</a>
+                        <a href="/ri-heatmap.html">🗺️ RI Heatmap</a>
                     </div>
                 </li>
                 <li class="nav-dropdown">
