Add Home button to report and heatmap

--- a/ri-report.html
+++ b/ri-report.html
@@ -70,6 +70,7 @@
 </head>
 <body>
     <div class="container">
+        <div style="position:absolute;top:1rem;left:1rem"><a href="/" style="background:rgba(255,255,255,0.1);padding:0.5rem 1rem;border-radius:8px;color:#e2e8f0;text-decoration:none;font-weight:500">← Home</a></div>
         <div class="hero">
             <h1>🏠 Rhode Island Real Estate Analysis</h1>
             <p class="subtitle">Deep Market Intelligence • 6,870 Properties • 46 Cities • 2024-2026</p>
