--- a/ri-heatmap.html
+++ b/ri-heatmap.html
@@ -20,8 +20,8 @@
     </style>
 </head>
 <body>
-    <a href="/" style="position:absolute;top:10px;left:10px;z-index:1001;background:#0f172a;padding:8px 16px;border-radius:8px;color:#e2e8f0;text-decoration:none;font-weight:500;box-shadow:0 2px 10px rgba(0,0,0,0.3)">← Home</a>
-    <a href="/" style="position:absolute;top:10px;left:10px;z-index:1001;background:#0f172a;padding:8px 16px;border-radius:8px;color:#e2e8f0;text-decoration:none;font-weight:500;box-shadow:0 2px 10px rgba(0,0,0,0.3)">← Home</a>
+    <a href="https://aibridges.org" style="position:absolute;top:10px;left:10px;z-index:1001;background:#6366f1;padding:8px 16px;border-radius:8px;color:white;text-decoration:none;font-weight:600;box-shadow:0 2px 10px rgba(0,0,0,0.3)">← Home</a>
+    <a href="ri-report.html" style="position:absolute;top:10px;left:100px;z-index:1001;background:#10b981;padding:8px 16px;border-radius:8px;color:white;text-decoration:none;font-weight:600;box-shadow:0 2px 10px rgba(0,0,0,0.3)">📊 Report</a>
     <div id="map"></div>
     <div class="controls">
         <h3>🏠 RI Real Estate</h3>
